--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="./src/.css/TailwindOutput.css" rel="stylesheet">
+    <link href="./src/css/TailwindOutput.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
