Adds sort by and order by functionality and only allows users to delete their own comments

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="./src/css/TailwindOutput.css" rel="stylesheet">
+    <link href="./src/.css/TailwindOutput.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="./src/assets/apple.gif"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NC News Apple</title>
   </head>
   <body>
     <div id="root"></div>
